# master-mcp-server

./: README.md  main.py  pyproject.toml
src/: note_mcp_serve.py
